[package]
name = "mining_width_maintainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[profile.release]
debug = true
lto = "fat"

[dependencies]
depends = "0.10.1"
itertools = "0.11.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
num = "0.4.1"
rand = "0.8.5"
